This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix several minor bugs in asyncio
Type: behavior Stage: resolved
Components: asyncio, Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: asvetlov, serhiy.storchaka, yselivanov
Priority: normal Keywords: patch

Created on 2018-05-20 09:15 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 7003 merged serhiy.storchaka, 2018-05-20 09:20
PR 7005 merged miss-islington, 2018-05-20 13:31
PR 7006 merged serhiy.storchaka, 2018-05-20 14:03
Messages (4)
msg317160 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-20 09:15
* get_future_loop() silenced all exceptions raised when look up the get_loop attribute, not just an AttributeError.

* enter_task() silenced all exceptions raised when look up the current task, not just a KeyError.

* repr() was called for a borrowed link in enter_task() and task_step_impl().

* str() was used instead of repr() in formatting one error message.

* There where few reference leaks.
msg317167 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-20 13:30
New changeset 6655354afcd116c27486bb5ba1dfa50b369d8d85 by Serhiy Storchaka in branch 'master':
bpo-33584: Fix several minor bugs in asyncio. (GH-7003)
https://github.com/python/cpython/commit/6655354afcd116c27486bb5ba1dfa50b369d8d85
msg317171 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-20 14:33
New changeset 49418f6df7a234243a470260e1b59e9e4c0e4768 by Serhiy Storchaka in branch '3.6':
[3.6] bpo-33584: Fix several minor bugs in asyncio. (GH-7003) (#7006)
https://github.com/python/cpython/commit/49418f6df7a234243a470260e1b59e9e4c0e4768
msg317172 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-20 14:34
New changeset 52d1741c954448cd9ce3f705402e88211b8d4136 by Serhiy Storchaka (Miss Islington (bot)) in branch '3.7':
bpo-33584: Fix several minor bugs in asyncio. (GH-7003) (GH-7005)
https://github.com/python/cpython/commit/52d1741c954448cd9ce3f705402e88211b8d4136
History
Date User Action Args
2022-04-11 14:59:00adminsetgithub: 77765
2018-05-20 14:52:23serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-05-20 14:34:31serhiy.storchakasetmessages: + msg317172
2018-05-20 14:33:57serhiy.storchakasetmessages: + msg317171
2018-05-20 14:03:26serhiy.storchakasetpull_requests: + pull_request6658
2018-05-20 13:31:40miss-islingtonsetpull_requests: + pull_request6657
2018-05-20 13:30:33serhiy.storchakasetmessages: + msg317167
2018-05-20 09:20:20serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request6655
2018-05-20 09:15:22serhiy.storchakacreate