[3.6] bpo-33584: Fix several minor bugs in asyncio. (GH-7003) (#7006)

* repr() was called for a borrowed link.
* str() was used instead of repr() in formatting one error message.
(cherry picked from commit 6655354afcd116c27486bb5ba1dfa50b369d8d85)